2012-10-06  Dehao Chen  <dehao@google.com>

	PR debug/54826
	* gimple-low.c (lower_stmt): Set the block for call args.

2012-10-06  Jan Hubicka  <jh@suse.cz>

	* doc/invoke.texi (-fprofile-report): Document.
	* common.opt (-fprofile-report): New option.
	* toplev.c (finalize): Call dump_profile_report.
	* toplev.h (profile_report): Declare.
	* passes.c (profile_record): New static var.
	(check_profile_consistency): New function.
	(dump_profile_record): New function.
	(execute_one_ipa_transform_pass): Call check_profile_consistency.
	(execute_one_pass): Likewise.

2012-10-06  Jan Hubicka  <jh@suse.cz>

	PR lto/54790 
	* lto-streamer.h (lto_symtab_register_decl, lto_symtab_get_resolution,
	lto_mark_nothrow_fndecl, lto_fixup_nothrow_decls): Remove.
	* lto-symtab.c (lto_symtab_register_decl): Remove.

2012-10-06  Andreas Schwab  <schwab@linux-m68k.org>

	PR rtl-optimization/54739
	* config/m68k/m68k.md (anddi3, iordi3, xordi3, one_cmpldi2):
	Remove.

2012-10-06  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/54760
	* config/sh/sh.md (define_constants): Add UNSPECV_GBR.
	(get_thread_pointer, set_thread_pointer): New expanders.
	(load_gbr): Rename to store_gbr.  Remove GBR_REG use.
	(store_gbr): New insn.
	* config/sh/sh.c (prepare_move_operands): Use gen_store_gbr instead of
	gen_load_gbr in TLS_MODEL_LOCAL_EXEC case.
	(sh1_builtin_p): New function.
	(signature_args): Add SH_BLTIN_VP.
	(bdesc): Add __builtin_thread_pointer and __builtin_set_thread_pointer.

2012-10-05  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR rtl-optimization/54739
	* config/pa/pa.md: Remove DImode and, not and, ior and xor patterns
	for 32-bit targets.  Adjust expanders.

	* config/pa/pa.md: Adjust unamed HImode add insn pattern.

2012-10-05  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/sh.c (builtin_description): Add is_enabled member.
	(shmedia_builtin_p): New function.
	(bdesc): Use shmedia_builtin_p for existing built-ins.